<resources>
    <string name="app_name">UC-2000 Keyboard Lion</string>
    <string name="action_settings">Settings</string>
    <string name="transmission_circuit">TRANSMISSION CIRCUIT</string>
    <string name="send_button">SEND</string>
    <string name="for_seiko_uw01">FOR SEIKO Cal. UW01</string>
    <string name="how_to_use">How to use</string>
    <string name="antiphase">Antiphase</string>
    <string name="upload_bin">Upload BIN</string>
    <string name="upload_bin_run">Upload BIN + Run</string>
    <string name="transmission_test_start">Start Transmission Test</string>
    <string name="transmission_test_stop">Stop Transmission Test</string>
    <string name="upload_in_progress">Upload already in progress.</string>
    <string name="upload_file_too_large">BIN file is larger than 2048 bytes.</string>
    <string name="upload_complete">Upload complete.</string>
    <string name="upload_complete_run">Upload complete. Run command sent.</string>
    <string name="upload_ready">BIN selected. Press TRANSMISSION CIRCUIT to send.</string>
    <string name="upload_ready_run">BIN selected. Press TRANSMISSION CIRCUIT to send and run.</string>
    <string name="no_pending_bin">No BIN selected for upload.</string>
    <string name="upload_status_idle">No BIN selected.
Use menu -&gt; Upload BIN.</string>
    <string name="upload_status_ready">File:
%1$s
Press here to send.</string>
    <string name="upload_status_ready_run">File:
%1$s
Press here to send + run.</string>
    <string name="upload_status_sending">Sending:
%1$s</string>
    <string name="upload_status_complete">Done:
%1$s</string>
    <string name="upload_status_complete_run">Done + Run:
%1$s</string>
    <string name="upload_status_failed">Failed:
%1$s</string>
    <string name="upload_status_test">Transmission test running.
Repeating M-A / M-B.
Move the watch to find signal.</string>
    <string name="upload_failed">Upload failed.</string>
    <string name="file_open_failed">Could not open selected file.</string>
    <string name="help"><b>HOW TO USE</b>

        - Push the TRANSMIT button on the watch;


        - Mount the watch approximately in the place where the speaker is located;


        - Push the M-A M-B buttons to make sure that the connection is established;


        - If necessary, moving the watch, find a place with a better connection;


        - For some phones, you can try setting the option "Antiphase" to improve communication;


        - To reset the watch, long press "RST", then hold down all 4 buttons on the watch and wait a couple of seconds.;


        - Use the menu for BIN upload from storage. The phone transmits the bytes using the speaker coil.
    </string>
</resources>
