<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.azya.seiko.uc2000.MainActivity">
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/antiphase"
            android:orderInCategory="0"
            android:checkable="true"
            android:title="@string/antiphase"/>
    </group>
    <item
        android:id="@+id/how_to_use"
        android:orderInCategory="100"
        android:title="@string/how_to_use"/>
    <item
        android:id="@+id/upload_bin"
        android:orderInCategory="110"
        android:title="@string/upload_bin"/>
    <item
        android:id="@+id/upload_bin_run"
        android:orderInCategory="120"
        android:title="@string/upload_bin_run"/>
    <item
        android:id="@+id/transmission_test_start"
        android:orderInCategory="130"
        android:title="@string/transmission_test_start"/>
    <item
        android:id="@+id/transmission_test_stop"
        android:orderInCategory="140"
        android:title="@string/transmission_test_stop"/>
</menu>
